Review #1 Sprint 5 fixes