@@ -2,10 +2,11 @@ package taskManagers;
 
 import tasks.Task;
 import java.util.ArrayList;
+import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-    ArrayList<Task> history;
+    private List<Task> history;
 
     public InMemoryHistoryManager() {
         history = new ArrayList<>(10);
@@ -13,13 +14,14 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public ArrayList<Task> getHistory() {
-        return history;
+
+        return new ArrayList<>(this.history);
     }
 
     @Override
     public void add(Task task) {
         if (history.size() == 10) {
-            history.remove(0);
+            history.removeFirst();
         }
         history.add(task);
     }
